@@ -6988,4 +6988,5 @@ PACKAGE: 2.2.99.2
 2008-02-21 tdb
  * Added has_field/has_column methods to database to determine whether a
     dataset/table has the field/column configured
+ * An admin plugin to add/remove fields from the database
 
